spring security and JWT token updated

--- a/src/BackEnd/CollegeClubManagementSystem/src/main/resources/application.properties
+++ b/src/BackEnd/CollegeClubManagementSystem/src/main/resources/application.properties
@@ -6,3 +6,14 @@ spring.datasource.password=Mack@7507
 
 spring.jpa.hibernate.ddl-auto=update
   server.port=8081
+  
+spring.security.user.name=Mayur
+spring.security.user.password=MAck@7507
+
+# Generate a secure key, e.g., using an online generator
+#application.security.jwt.secret-key=YOUR_SUPER_SECRET_256_BIT_KEY_HERE_PASTE_AS_BASE64
+# Expiration in milliseconds (e.g., 24 hours)
+#application.security.jwt.expiration=86400000
+# Add this to application.properties
+application.security.jwt.secret-key=YourVeryLongAndSecureSecretKeyThatNobodyCanGuess
+jwt.secreteKey="askdhk3247923j2#43kh4kfndfns,fdn,msddfnn,sf";
